# gnome-game-console-feed

./: .gitignore  LICENSE  README.md  io.github.merklejerk.GameConsoleFeed.yaml  pyproject.toml
.github/workflows/: flatpak.yml
data/: io.github.merklejerk.GameConsoleFeed.desktop  io.github.merklejerk.GameConsoleFeed.metainfo.xml
src/game_console_feed/: config.py  discovery.py  main.py  pipeline.py  window.py
tests/: test_config.py  test_discovery.py
